Closed
Bug 1506079
Opened 7 years ago
Closed 7 years ago
toolkit/xre/nsAppRunner.cpp:1703:8: error: unused variable 'useX11Remote' with --disable-dbus
Categories
(Core Graveyard :: X-remote, defect)
Core Graveyard
X-remote
Tracking
(firefox-esr60 unaffected, firefox63 unaffected, firefox64 unaffected, firefox65 fixed)
RESOLVED
FIXED
mozilla65
Tracking | Status | |
---|---|---|
firefox-esr60 | --- | unaffected |
firefox63 | --- | unaffected |
firefox64 | --- | unaffected |
firefox65 | --- | fixed |
People
(Reporter: jbeich, Assigned: stransky)
References
(Blocks 1 open bug)
Details
(Keywords: regression)
Attachments
(1 file)
$ c++ -v
FreeBSD clang version 7.0.0 (tags/RELEASE_700/final 342383) (based on LLVM 7.0.0)
Target: x86_64-unknown-freebsd13.0
Thread model: posix
InstalledDir: /usr/bin
$ ./mach bootstrap
$ echo "ac_add_options --disable-dbus" >>.mozconfig
$ echo "ac_add_options --enable-warnings-as-errors # mimic MOZ_AUTOMATION" >>.mozconfig
$ ./mach build
toolkit/xre/nsAppRunner.cpp:1703:8: error: unused variable 'useX11Remote'
[-Werror,-Wunused-variable]
bool useX11Remote = GDK_IS_X11_DISPLAY(gdk_display_get_default());
^
1 error generated.
Assignee | ||
Comment 1•7 years ago
|
||
hm, disable --disable-dbus do you say? I think we should make it mandatory for Wayland builds. Why do you build it with such configuration anyway?
Flags: needinfo?(jbeich)
Summary: toolkit/xre/nsAppRunner.cpp:1703:8: error: unused variable 'useX11Remote' [-Werror,- Wunused-variable] → toolkit/xre/nsAppRunner.cpp:1703:8: error: unused variable 'useX11Remote' with --disable-dbus
Assignee | ||
Comment 2•7 years ago
|
||
Assignee | ||
Updated•7 years ago
|
Assignee: nobody → stransky
(In reply to Martin Stránský [:stransky] from comment #1)
> hm, disable --disable-dbus do you say? I think we should make it mandatory
> for Wayland builds. Why do you build it with such configuration anyway?
I'm not building with Wayland enabled. Bug 1504937 removed `&& defined(MOZ_WAYLAND)`.
Flags: needinfo?(jbeich)
Assignee | ||
Updated•7 years ago
|
Keywords: checkin-needed
Pushed by ebalazs@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/837bb87833a3
Build and run without DBus remote client on Wayland display, r=jhorak
Keywords: checkin-needed
Did the commit message and the comment in toolkit/xre/nsAppRunner.cpp arrive from the future where X11 is dead? nsAppRunner.cpp is built on all platforms, MOZ_WIDGET_GTK isn't limited to Wayland (non-default) and GDK_IS_X11_DISPLAY() is supported by Gtk3 built without Wayland support.
Comment 6•7 years ago
|
||
Plus, is unnecessarily dismissive.
Comment 7•7 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
Updated•7 years ago
|
status-firefox63:
--- → unaffected
status-firefox64:
--- → unaffected
status-firefox-esr60:
--- → unaffected
Updated•6 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•