Bug 1506079 - Build and run without DBus remote client on Wayland display, r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D11466

--HG--
extra : moz-landing-system : lando