toolkit/xre/nsAppRunner.cpp
@@ -1705,13 +1705,15 @@ StartRemoteClient(const char* aDesktopStartupID,
 #if defined(MOZ_ENABLE_DBUS)
   if (!useX11Remote) {
     client = new DBusRemoteClient();
-  } else
+  }
 #endif
-  {
+  if (useX11Remote) {
     client = new XRemoteClient();
   }
 
-  nsresult rv = client->Init();
+  // There are people who build Wayland without DBus...well
+  // don't judge others for personal taste.
+  nsresult rv = client ? client->Init() : NS_ERROR_FAILURE;
   if (NS_FAILED(rv))
     return REMOTE_NOT_FOUND;
 
